refactor: improved code clarity